k8s/deploy/apps/crdb.yaml
# Generates a single multi-tenant CockroachDB cluster
---
# Source: https://github.com/cockroachdb/cockroach-operator/blob/master/examples/client-secure-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crdb-admin
  namespace: crdb
  labels:
    app.kubernetes.io/name: crdb
    app.kubernetes.io/instance: admin
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: crdb
      app.kubernetes.io/instance: admin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crdb
        app.kubernetes.io/instance: admin
    spec:
      containers:
      - name: cockroachdb-client-secure
        image: cockroachdb/cockroach:v23.1.6
        volumeMounts:
        - name: client-certs
          mountPath: /cockroach/cockroach-certs/
          readOnly: true
        command:
        - sleep
        - "infinity"
      terminationGracePeriodSeconds: 0
      volumes:
      - name: client-certs
        projected:
          sources:
            - secret:
                name: crdb-node
                items:
                  - key: ca.crt
                    path: ca.crt
            - secret:
                name: crdb-root
                items:
                  - key: tls.crt
                    path: client.root.crt
                  - key: tls.key
                    path: client.root.key
