k8s/deploy/apps/postgres-exporter.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-exporter
  namespace: postgres
  labels:
    app.kubernetes.io/name: postgres-exporter
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres-exporter
        eevans.me/postgres-access: 'true'
    spec:
      serviceAccountName: postgres-exporter
      containers:
        - name: exporter
          image: quay.io/prometheuscommunity/postgres-exporter:v0.15.0
          args: [--config.file=/config/postgres_exporter.yml]
          securityContext:
            runAsUser: 65534
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          emptyDir: {}
