k8s/deploy/apps/clickhouse-keeper.yaml
# Taken from https://github.com/Altinity/clickhouse-operator/blob/b8caed61be663b834d9154f049bd1ea9c6d9e753/deploy/clickhouse-keeper/clickhouse-keeper-manually/clickhouse-keeper-3-nodes.yaml
---
# Setup Service to provide access to ClickHouse keeper for clients
apiVersion: v1
kind: Service
metadata:
  # DNS would be like clickhouse-keeper.namespace.svc
  name: clickhouse-keeper
  namespace: clickhouse
  labels:
    app.kubernetes.io/name: clickhouse-keeper
spec:
  ports:
    - port: 2181
      name: client
    - port: 7000
      name: prometheus
  selector:
    app.kubernetes.io/name: clickhouse-keeper
    app.kuberentes.io/component: node
---
# Setup Headless Service for StatefulSet
apiVersion: v1
kind: Service
metadata:
  # DNS would be like clickhouse-keeper-0.clickhouse-keeper-headless.namespace.svc
  name: clickhouse-keeper-headless
  namespace: clickhouse
  labels:
    app.kubernetes.io/name: clickhouse-keeper
spec:
  ports:
    - port: 9444
      name: raft
  clusterIP: None
  selector:
    app.kubernetes.io/name: clickhouse-keeper
    app.kuberentes.io/component: node
