k8s/deploy/apps/gitea-act-runner.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: act-runner
  namespace: gitea
  labels:
    app.kubernetes.io/app: act-runner
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/app: act-runner
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/app: act-runner
  name: act-runner
  namespace: gitea
spec:
  replicas: 1
  serviceName: act-runner
  selector:
    matchLabels:
      app.kubernetes.io/app: act-runner
  template:
    metadata:
      labels:
        app.kubernetes.io/app: act-runner
    spec:
      restartPolicy: Always
      serviceAccountName: act-runner
      securityContext:
        fsGroup: 1000
      containers:
      - name: runner
        image: gitea/act_runner:0.2.6-dind-rootless
        imagePullPolicy: Always
        securityContext:
          privileged: true
        volumeMounts:
        - name: runner-data
          mountPath: /data
        - name: config
          mountPath: /config
      volumes:
        - name: config
          configMap:
            name: act-runner-config
  volumeClaimTemplates:
    - metadata:
        name: runner-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
