k8s/deploy/apps/eevansco-static.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: eevansco
  namespace: rook-ceph
spec:
  parentRefs:
  - name: ingress-public
    namespace: ingress-public
  hostnames:
    - eevans.co
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
      - type: URLRewrite
        urlRewrite:
          hostname: eevansco.s3.eevans.co
    backendRefs:
    - name: rook-ceph-rgw-s3-public
      port: 80
