k8s/deploy/apps/plausible.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plausible
  namespace: plausible
  labels:
    app.kubernetes.io/name: plausible
spec:
  ports:
    - port: 8000
      name: http
  selector:
    app.kubernetes.io/name: plausible
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plausible
  namespace: plausible
  labels:
    app.kubernetes.io/name: plausible
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: plausible
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plausible
    spec:
      serviceAccountName: plausible
      containers:
        - name: plausible
          image: plausible/analytics:v2.0.0
          ports:
            - name: http
              containerPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plausible
  namespace: plausible
  labels:
    app.kubernetes.io/name: plausible
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: cilium
  tls:
   - hosts:
     - plausible.eevans.me
     secretName: plausible-admin-tls
  rules:
  - host: plausible.eevans.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plausible
            port:
              name: http
