k8s/deploy/apps/wraft.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: webrtc-introducer
  name: webrtc-introducer
  namespace: eevansco
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webrtc-introducer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webrtc-introducer
        eevans.me/public: "true"
    spec:
      containers:
      - image: gitea.eevans.me/shosti/webrtc-introducer:v1
        name: webrtc-introducer
        ports:
          - name: http
            containerPort: 5000
        livenessProbe:
          tcpSocket:
            port: http
        readinessProbe:
          tcpSocket:
            port: http
        securityContext:
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: webrtc-introducer
  namespace: eevansco
  labels:
    app.kubernetes.io/name: webrtc-introducer
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: webrtc-introducer
  ports:
    - name: http
      port: 5000
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: webrtc-introducer
  namespace: eevansco
  labels:
    app.kubernetes.io/name: webrtc-introducer
spec:
  parentRefs:
  - name: ingress-public
    namespace: ingress-public
  hostnames:
    - webrtc-introducer.eevans.co
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: webrtc-introducer
      port: 5000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: wraft
  namespace: rook-ceph
spec:
  parentRefs:
  - name: ingress-public
    namespace: ingress-public
  hostnames:
    - wraft0.eevans.co
    - wraft1.eevans.co
    - wraft2.eevans.co
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
      - type: URLRewrite
        urlRewrite:
          hostname: wraft.s3.eevans.co
    backendRefs:
    - name: rook-ceph-rgw-s3-public
      port: 80
