k8s/deploy/apps/commento.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: commento
  namespace: commento
  labels:
    app.kubernetes.io/name: commento
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app.kubernetes.io/name: commento
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commento
  namespace: commento
  labels:
    app.kubernetes.io/name: commento
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: commento
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: commento
        eevans.me/postgres-access: 'true'
        eevans.me/public: 'true'
      annotations:
        eevans.me/secret-ref: aef55
    spec:
      serviceAccountName: commento
      containers:
        - name: commento
          image: caroga/commentoplusplus:v1.8.7
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 6
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 98080
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: commento
  namespace: commento
  labels:
    app.kubernetes.io/name: commento
spec:
  parentRefs:
  - name: ingress-public
    namespace: ingress-public
  hostnames:
    - commento.eevans.co
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: commento
      port: 8080
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: commento
  namespace: commento
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: commento
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: postgres
      toPorts:
        - ports:
            - port: "5432"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: email-smtp.us-west-2.amazonaws.com
      toPorts:
        - ports:
            - port: "465"
    - toFQDNs:
        - matchName: oauth2.googleapis.com
        - matchName: lh3.googleusercontent.com
        - matchName: api.github.com
        - matchName: github.com
        - matchName: avatars.githubusercontent.com
      toPorts:
        - ports:
            - port: "443"
