k8s/deploy/apps/eevansco.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: eevansco
spec:
  podSelector: {}
  policyTypes:
  - Egress
