k8s/deploy/apps/ghost.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ghost
  labels:
    app.kubernetes.io/name: ghost
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ghost
  ports:
    - name: http
      port: 2368
      targetPort: 2368
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ghost-public
  namespace: ghost
  labels:
    app.kubernetes.io/name: ghost
spec:
  parentRefs:
  - name: ingress-public
    namespace: ingress-public
  hostnames:
    - blog.allegramolto.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          set:
            - name: x-forwarded-proto
              value: https
    backendRefs:
    - name: ghost
      port: 2368
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-admin
  namespace: ghost
  labels:
    app.kubernetes.io/name: ghost
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
   - hosts:
     - ghost.eevans.me
     secretName: ghost-admin-tls
  rules:
  - host: ghost.eevans.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ghost
            port:
              name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: ghost
  labels:
    app.kubernetes.io/name: ghost
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ghost
  replicas: 1
  strategy:
    type: Recreate # ghost doesn't work in HA, which is super annoying!
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ghost
        eevans.me/public: "true"
    spec:
      serviceAccountName: ghost
      containers:
        - name: ghost
          image: shosti/ghost:5.74.5
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: '1'
              memory: 1Gi
          ports:
            - name: http
              containerPort: 2368
          readinessProbe:
            httpGet:
              path: /ghost/api/admin/site/
              port: http
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: Host
                  value: ghost.eevans.me
          livenessProbe:
            initialDelaySeconds: 120
            httpGet:
              path: /ghost/api/admin/site/
              port: http
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: Host
                  value: ghost.eevans.me
          securityContext:
            runAsNonRoot: true
            runAsUser: 2368
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ghost
  namespace: ghost
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ghost
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "2368"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: mariadb
      toPorts:
        - ports:
            - port: "3306"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: rook-ceph
            app.kubernetes.io/instance: s3-public
      toPorts:
        - ports:
            - port: "8080"
            - port: "80"
    - toEndpoints:
        - {}
    - toFQDNs:
        - matchName: email-smtp.us-west-2.amazonaws.com
      toPorts:
        - ports:
            - port: "465"
    - toFQDNs:
        - matchName: www.gravatar.com
        - matchName: static.ghost.org
        - matchName: blog.allegramolto.com
      toPorts:
        - ports:
            - port: "80"
            - port: "443"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ghost-static
  namespace: rook-ceph
spec:
  parentRefs:
  - name: ingress-public
    namespace: ingress-public
  hostnames:
    - static.allegramolto.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
      - type: URLRewrite
        urlRewrite:
          hostname: ghost-static.s3.eevans.co
    backendRefs:
    - name: rook-ceph-rgw-s3-public
      port: 80
