k8s/deploy/apps/listmonk.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: listmonk
  name: listmonk
  namespace: listmonk
  annotations:
    eevans.me/secret-ref: b0c18
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: listmonk
  strategy: {}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: listmonk
        eevans.me/public: "true"
        eevans.me/postgres-access: "true"
    spec:
      containers:
        - image: listmonk/listmonk:v2.5.1
          name: listmonk
          ports:
            - name: http
              containerPort: 9000
          volumeMounts:
            - name: config
              mountPath: /listmonk/config.toml
              subPath: config.toml
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
          securityContext:
            runAsNonRoot: true
            runAsUser: 1900
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: config
          configMap:
            name: listmonk
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: listmonk
  name: listmonk
  namespace: listmonk
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: listmonk
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: listmonk-admin
  namespace: listmonk
  labels:
    app.kubernetes.io/name: listmonk
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
   - hosts:
     - listmonk.eevans.me
     secretName: listmonk-admin-tls
  rules:
  - host: listmonk.eevans.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: listmonk
            port:
              name: http
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: listmonk-uploads
  namespace: rook-ceph
spec:
  parentRefs:
  - name: ingress-public
    namespace: ingress-public
  hostnames:
    - list-uploads.eevans.co
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
      - type: URLRewrite
        urlRewrite:
          hostname: listmonk-uploads.s3.eevans.co
    backendRefs:
    - name: rook-ceph-rgw-s3-public
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: listmonk-public
  namespace: listmonk
spec:
  parentRefs:
  - name: ingress-public
    namespace: ingress-public
  hostnames:
    - eevans.co
  # See https://listmonk.app/docs/configuration/#public-endpoints-to-expose-to-the-internet
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /subscription
    - path:
        type: PathPrefix
        value: /link
    - path:
        type: PathPrefix
        value: /campaign
    - path:
        type: PathPrefix
        value: /public
    - path:
        type: PathPrefix
        value: /webhooks/service
    backendRefs:
    - name: listmonk
      port: 9000
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: listmonk
  namespace: listmonk
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: listmonk
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "9000"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: rook-ceph
            app.kubernetes.io/instance: s3-public
      toPorts:
        - ports:
            - port: "8080"
            - port: "80"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: postgres
            app.kubernetes.io/name: postgres
      toPorts:
        - ports:
            - port: "5432"
    - toEndpoints:
        - {}
    - toFQDNs:
        - matchName: email-smtp.us-west-2.amazonaws.com
      toPorts:
        - ports:
            - port: "465"
    - toFQDNs:
        - matchName: hcaptcha.com
        - matchName: sns.us-west-2.amazonaws.com
      toPorts:
        - ports:
            - port: "443"
