k8s/deploy/apps/mariadb.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mariadb
  namespace: mariadb
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: mariadb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mariadb-operator
      ports:
        - port: 3306
        - port: 5555
    - from:
        - namespaceSelector:
            matchLabels:
              eevans.me/mariadb-access: 'true'
      ports:
        - port: 3306
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 9104
    - from:
        - podSelector: {}
