k8s/deploy/apps/paperless.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
  namespace: paperless
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: paperless-redis
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: paperless
      ports:
        - port: 6379
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 9121
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres
  namespace: paperless
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: paperless-db
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: paperless
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: postgres-config-paperless
      ports:
        - port: 5432
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 9187
  egress: []
