k8s/deploy/apps/unifi.yaml
---
# NetPol to block egress (preventing unifi from phoning home)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: unifi-egress
  namespace: unifi
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toCIDRSet:
        - cidr: 0.0.0.0/0
      toPorts:
        - ports:
            - port: "465"
              protocol: TCP
    - toFQDNs:
        - matchName: fw-download.ubnt.com
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: fw-update.ubnt.com
      toPorts:
        - ports:
            - port: "443"
